--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major">Retire With<br />
 									Celsius</h1>
-									<p>Learn about how <strong>Celsius</strong> and Bitcoin can help you and your family prepare for retirement. </p>
+									<p>Learn how <strong>Celsius</strong> and Bitcoin can help you and your family prepare for retirement. </p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right"></a></li>
 									</ul>
@@ -37,16 +37,6 @@
 							</section>
 							
 
-						<!-- Panel (Spotlight) 
-							<section class="panel spotlight medium right" id="first">
-								<div class="content span-7">
-									<h2 class="major">Current Problem</h2>
-									<p> Traditonal investment vehicles are failing to out perform the monetary inflation rate.</p>
-								</div>
-								<div class="image filtered tinted" data-position="top left">
-									<img src="images/bg.jpg" alt="" />
-								</div>
-							</section>-->
 
 						<!-- Panel -->
 							<section class="panel color1" id="first">
@@ -63,8 +53,8 @@
 							<section class="panel color2">
 								<div class="intro joined">
 									<h2 class="major">The True Cost of Fees</h2>
-									<p>The unfortuante truth: Many traditonal retirement investments are paired with fees that make financial institutions wealthy, not you.</p>
-									<p>See how much annual fees affect your retirement balance when you <strong>invest 10,000$ a year for 30 years with a 8 Percent return.</strong> </p>
+									<p>The unfortunate truth: Many traditional retirement investments are paired with fees that make financial institutions wealthy, not you</p>
+									<p>See how annual fees affect your retirement balance when you <strong>invest 10,000$ a year for 30 years with a 8 Percent return.</strong> </p>
 								</div>
 								<br>
 								<div class="inner">
@@ -79,8 +69,8 @@
 							<section class="panel color1" id="first">
 								<div class="intro joined">
 									<h2 class="major">The Power of Bitcoin and Celsius</h2>
-									<p> <strong>Bitcoin</strong> has been the <strong> performing asset of all time</strong>. Anyone planning for retirement needs to consider adding pristine digital assets to their portfolio.</p>
-									<p> When you combine the best performing asset of all time with the <strong>feeless yield producing benifits of Celsius</strong>, you're taking your retiremet planning to another level.</p>
+									<p> <strong>Bitcoin</strong> has been the <strong> best performing asset of all time</strong>. Anyone planning for retirement needs to consider adding pristine digital assets to their portfolio.</p>
+									<p> When you combine the best performing asset of all time with the <strong>feeless yield producing benefits of Celsius</strong>, you're taking your retirement planning to another level.</p>
 									
 								</div>
 								<div class="inner">
