--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 								<div class="intro joined">
 									<h2 class="major">The True Cost of Fees</h2>
 									<p>The unfortunate truth: Many traditional retirement investments are paired with fees that make financial institutions wealthy, not you</p>
-									<p>See how annual fees affect your retirement balance when you <strong>invest 10,000$ a year for 30 years with a 8 Percent return.</strong> </p>
+									<p>See how annual fees affect your retirement balance when you <strong>invest 10,000$ a year for 30 years with a 8 percent return.</strong> </p>
 								</div>
 								<br>
 								<div class="inner">
