--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h1 class="major">Retire Withh<br />
+									<h1 class="major">Retire With<br />
 									Celsius</h1>
 									<p>Learn how <strong>Celsius</strong> and Bitcoin can help you and your family prepare for retirement. </p>
 									<ul class="actions">
